添加了编译问题解决方案